--- a/webapp/WEB-INF/templates/admin/plugins/forms/modules/template/modify_template.html
+++ b/webapp/WEB-INF/templates/admin/plugins/forms/modules/template/modify_template.html
@@ -16,6 +16,78 @@
                                     <span class="group-radio-label"> ${step.title}</span>
                                 </label>
                             </div>
+                            <@tabPanel id='panel-question' active=true>
+                                 <@table class='forms-questions is-fullwidth'>
+                                    <@tr>
+                                        <@th sm=1 hide=['xs']></@th>
+                                        <@th sm=5 hide=['xs']>#i18n{forms.manage_questions.columnTitle}</@th>
+                                        <@th sm=1 title='#i18n{forms.manage_questions.columnCondition}' hide=['xs']><@icon style='question'/></@th>
+                                        <@th sm=4 hide=['xs']>#i18n{forms.manage_questions.columnAction}</@th>
+                                        <@th sm=1></@th>
+                                    </@tr>
+                                    <@tableHeadBodySeparator />
+                                    <#list composite_list as composite>
+                                    	<#assign group=composite.type == 'group' />
+										<#if group><#assign trClass='group tr-group' /><#else><#assign trClass='' /></#if>
+                                        <@tr class=trClass>
+                                            <@input type='hidden' name='own_display_id_parent' value='${composite.formDisplay.parentId}' />
+                                            <@input type='hidden' name='own_display_id_composite' value='${composite.formDisplay.id}' />
+                                            <@td sm=1>
+                                                <#assign parentd>parent_${composite.formDisplay.id}</#assign>
+                                                <#if group>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" id="${parentd}" name="id_parent" value="${composite.formDisplay.id}" <#if id_parent=composite.formDisplay.id>checked</#if>>
+                                                            <span class="group-radio-label"></span>
+                                                        </label>
+                                                    </div>
+                                                </#if>
+                                            </@td>
+                                            <@td sm=5>
+                                                <#if group>
+                                                	<label for="${parentd}"><h4>
+                                                </#if>
+                                                <#list 0..composite.formDisplay.depth as indent>
+                                                	<#if indent_index gte 0>
+                                                		<#if indent_has_next>
+                                                			<@icon style='level-down-alt' class='text-primary' />
+                                                		<#else>
+                                                			<@icon style='${composite.icon!}' />
+                                                		</#if>
+                                                	</#if>
+                                                </#list>
+                                                ${composite.title}
+                                                <#if group>
+                                                	</h4></label>
+                                               	</#if>
+                                            </@td>
+                                            <@div hide=['sm','md','lg','xl']>
+                                            	<@btnGroup size='sm'>
+                                            		<#if group>
+                                            			<@aButton hideTitle=['all'] href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=modifyGroup&id_step=${step.id}&id_group=${composite.formDisplay.compositeId}' title='#i18n{forms.manage_questions.action.modifyGroup}' buttonIcon='pencil' size='sm' />
+                                            		<#else>
+                                            			<@aButton hideTitle=['all'] href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=modifyQuestion&id_step=${step.id}&id_question=${composite.formDisplay.compositeId}' title='#i18n{forms.manage_questions.action.modifyQuestion}' buttonIcon='pencil' />
+                                            		</#if> 
+                                            	</@btnGroup>
+                                            </@div>
+											<@td hide=['xs'] sm=1>
+											</@td>
+                                            <@td hide=['xs'] sm=4>
+                                            	<#if group>
+                                        			<@aButton hideTitle=['all'] href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=modifyGroup&id_step=${step.id}&id_group=${composite.formDisplay.compositeId}' title='#i18n{forms.manage_questions.action.modifyGroup}' buttonIcon='pencil' size='sm' />
+                                        		<#else>
+                                        			<@aButton hideTitle=['all'] href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=modifyQuestion&id_step=${step.id}&id_question=${composite.formDisplay.compositeId}' title='#i18n{forms.manage_questions.action.modifyQuestion}' buttonIcon='pencil' size='sm' />
+                                        		</#if> 
+									        </@td>
+                                            <@td sm=1>
+                                            	<#if group>
+                                            		<@icon style='minus-square' class='text-primary group-toggle' />
+                                            	</#if>
+                                            </@td>
+                                        </@tr>
+                                    </#list>
+                                </@table>
+                            </@tabPanel>
 	                    </@columns>
 	                    <@columns sm=2 id='sticky-container'>
 						    <@ul class='list-group unstyled' id='info-right'>
