FORMSTMPL-2: Factorize code & add move composite

--- a/webapp/WEB-INF/templates/admin/plugins/forms/modules/template/entries/all_entry_breadcrumbs.html
+++ b/webapp/WEB-INF/templates/admin/plugins/forms/modules/template/entries/all_entry_breadcrumbs.html
@@ -1,4 +1,4 @@
 <@formBreadCrumb home='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp'>
-    <@breadcrumbItem><@link href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=modifyTemplate&id_step=${step.id}' title='Liste des modèles'>${step.title}</@link></@breadcrumbItem> 
+    <@breadcrumbItem><@link href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=manageQuestions&id_step=${step.id}' title='Liste des modèles'>${step.title}</@link></@breadcrumbItem> 
 	<@breadcrumbItem class='active is-active'>${entry.entryType.title}</@breadcrumbItem>
 </@formBreadCrumb>
