--- a/webapp/WEB-INF/templates/admin/plugins/forms/modules/template/modify_template.html
+++ b/webapp/WEB-INF/templates/admin/plugins/forms/modules/template/modify_template.html
@@ -82,6 +82,7 @@
                                         		</#if>
                                         		<@button type='button' style='modal' buttonTargetId='#qModal' params='data-url="jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=moveComposite&id_step=${step.id}&id_display=${composite.formDisplay.id}"' title='#i18n{forms.manage_questions.action.move}' hideTitle=['all'] buttonIcon='sort' size='sm' />
                                         		<@aButton hideTitle=['all'] href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?view=getConfirmRemoveComposite&id_step=${step.id}&id_display=${composite.formDisplay.id}' title='#i18n{forms.manage_questions.action.removeQuestion}' buttonIcon='trash' color='danger' size='sm' />
+                                        		<@aButton hideTitle=['all'] href='jsp/admin/plugins/forms/modules/template/ManageTemplatesStep.jsp?action=duplicateQuestion&id_step=${step.id}&id_target=${composite.formDisplay.compositeId}' class='btn-into'  title='#i18n{forms.manage_questions.action.copy}' buttonIcon='copy' size='sm' />
 									        </@td>
                                             <@td sm=1>
                                             	<#if group>
